prototypes/p5a/tests/invalid/26_concurrent_modification.hll
// INVALID: modify collection while iterating
module concurrent_mod

function main() {
    let mut orders = List(1, 2, 3)

    for item in orders {
        orders = List(4, 5)
    }
}
